--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
           <div id="hello" class="typewriter pb-3">
             MacOs - дерьмо
           </div>
-          <a class="btn btn-primary mb-5" href="https://www.google.com/url?sa=i&url=https%3A%2F%2F24-info.pro%2Ferotica%2Fbig-ass%2F26084-strashnye-zhopy-slabonervnym-ne-smotret.html&psig=AOvVaw355uAjVcx4fY3zcejnv2_9&ust=1681989424133000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCJiP1YLptf4CFQAAAAAdAAAAABAE"></a>
+          <a class="btn btn-primary mb-5" href="https://24-info.pro/uploads/posts/2016-02/1455002226_strashnye-sraki-1.jpg"></a>
         </div>
         <div id="world">
           <canvas id='rotatingGlobe' style='cursor: move;'></canvas>
